--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "/kenneth-lau/swagger-ui-test/blob/gh-pages/instagram.json";
+        url = "https://github.com/kenneth-lau/swagger-ui-test/blob/gh-pages/instagram.json";
       }
 
       hljs.configure({
